Create: create dialog for Link Collector

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ClickyClicky" />
+        <activity android:name=".LinkCollectorActivity" />
     </application>
 
 </manifest>
