--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.numad21fa_zanyuanyang">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_zy"
@@ -17,6 +19,7 @@
         </activity>
         <activity android:name=".ClickyClicky" />
         <activity android:name=".LinkCollectorActivity" android:configChanges="keyboardHidden|orientation|screenSize"/>
+        <activity android:name=".LocatorActivity" />
     </application>
 
 </manifest>
